--- a/site/index.html
+++ b/site/index.html
@@ -21,7 +21,7 @@
   <header>
     <div>
       <h1 style="margin:0">awesome-seedance gallery</h1>
-      <div class="muted">Seedance 2.0 cases & prompts (index only, link-back first)</div>
+      <div class="muted">Seedance 2.0 cases & prompts (index only, link-back first) · Maintained by Uota🦞</div>
     </div>
     <div class="toolbar">
       <input id="q" placeholder="search title/tags" />
@@ -40,6 +40,31 @@ async function loadItems() {
 
 function uniq(arr) { return [...new Set(arr)].sort(); }
 
+function renderPreview(it) {
+  const p = it && it.preview;
+  if (!p || !p.ok || !p.url) return '';
+  const kind = (p.kind || 'image').toLowerCase();
+  const url = p.url;
+  const note = p.note ? `<div class="muted" style="margin-top:6px; font-size:12px">${escapeHtml(p.note)}</div>` : '';
+
+  if (kind === 'video') {
+    return `
+      <div style="margin-top:10px">
+        <video controls muted playsinline preload="metadata" style="width:100%; border-radius:8px" src="${url}"></video>
+        ${note}
+      </div>
+    `;
+  }
+
+  // image / gif
+  return `
+    <div style="margin-top:10px">
+      <img loading="lazy" referrerpolicy="no-referrer" style="width:100%; border-radius:8px" src="${url}" alt="preview" />
+      ${note}
+    </div>
+  `;
+}
+
 function render(items) {
   const grid = document.getElementById('grid');
   grid.innerHTML = '';
@@ -55,7 +80,8 @@ function render(items) {
       <div style="margin-top:6px" class="muted">
         Author: <span class="${unknown ? 'warn' : ''}">${escapeHtml(it.author || 'Unknown')}</span>
       </div>
-      <div style="margin-top:6px"><a href="${it.url}" target="_blank" rel="noreferrer">Source link →</a></div>
+      ${renderPreview(it)}
+      <div style="margin-top:10px"><a href="${it.url}" target="_blank" rel="noreferrer">Source link →</a></div>
       <div class="tags">${(it.tags||[]).slice(0,12).map(t=>`<span class="tag">${escapeHtml(t)}</span>`).join('')}</div>
       ${unknown ? '<div class="muted" style="margin-top:8px">needs-credit: please submit a Credit Fix</div>' : ''}
     `;
